--- a/Mi amorsote.html
+++ b/Mi amorsote.html
@@ -1,28 +1,35 @@
 <!DOCTYPE html>
 <html lang="es">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Oda Mi Sol!</title>
 </head>
-<body>
-    <h1>☀️!!!Hola mi solecito!!!☀️</h1>
-    <hr>
-    <p>
-        Mi amor, estoy muy emocionada de aprender esto y compartir este mundito con ute!❤️.
-        Además estoy feliz, porque este es el primer paso para aprender cosas nuevas y de las que
-        estoy muy interesada
-    </p>
-    <img src="Imagenes/Lelos.jpg" width="700" height="1000">
-    <p>
-        <strong> Este es un recuerdito de nuestro primer aniversario</strong>
-    </p>
-    <p>
-        <i>Eso me recuerda que debemos tomarnos más fotos juntos!!!!</i>
-    </p>
-    <p>
-         Deseo guardar muchos recuerdos, hasta de las cosas más cotidianas, cualquier cosa que sea junto a ute 💖
-    </p>
 
+<body>
+    <center>
+        <h1>☀️!!!Hola mi solecito!!!☀️</h1>
+        <br>
+        <br>
+        <br>
+
+        <p>
+            Mi amor, estoy muy emocionada de aprender esto y compartir este mundito con ute!❤️.
+            Además estoy feliz, porque este es el primer paso para aprender cosas nuevas y de las que
+            estoy muy interesada
+        </p>
+        <img src="Imagenes/Lelos.jpg" width="700" height="1000">
+        <p>
+            <strong> Este es un recuerdito de nuestro primer aniversario</strong>
+        </p>
+        <p>
+            <i>Eso me recuerda que debemos tomarnos más fotos juntos!!!!</i>
+        </p>
+        <p>
+            Deseo guardar muchos recuerdos, hasta de las cosas más cotidianas, cualquier cosa que sea junto a ute 💖
+        </p>
+    </center>
 </body>
+
 </html>
